--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-visjs-timeline",
-  "version": "1.5.0",
+  "version": "1.5.3",
   "description": "React component for the vis.js timeline module",
   "main": "build/index.js",
   "scripts": {
@@ -9,6 +9,9 @@
     "precommit": "lint-staged",
     "prepublish": "npm run release",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "publishConfig": {
+    "registry": "https://nexus.labs.optellum.co.uk/repository/optellum-npm-hosted/"
   },
   "lint-staged": {
     "*.js": [
